# Py_web_HW_13

./: .gitignore  README.md  pyproject.toml
contacts_fastapi/app_contacts/: main.py
contacts_fastapi/app_contacts/alembic/versions/: 5d6ae58dcaae_add_default_avatar.py  73699868892b_add_role.py  9f8908555781_add_role.py
contacts_fastapi/app_contacts/src/conf/: config.py
contacts_fastapi/app_contacts/src/database/: db.py  models.py
contacts_fastapi/app_contacts/src/repository/: contacts.py  groups.py  users.py
contacts_fastapi/app_contacts/src/routes/: auth.py  contacts.py  groups.py  user.py
contacts_fastapi/app_contacts/src/schemas/: contacts.py  users.py
contacts_fastapi/app_contacts/src/services/: auth.py  email.py  upload_avatar.py
contacts_fastapi/client_for_fastapi/javascript/: listContacts.js  main.js
contacts_fastapi/client_frontend/javascript/: add_contacts.js  listContacts.js  main.js
contacts_fastapi/client_frontend/templates/: index.html  listContacts.html
contacts_fastapi/client_on_fastapi/: main.py
quotes_django/my_quotes/my_quotes/: settings.py
quotes_django/my_quotes/quotes/: models.py  urls.py  views.py
quotes_django/my_quotes/quotes/migrations/: 0001_initial.py
quotes_django/my_quotes/quotes/mongo_postgres_db/: config.ini  connect_by_mongo.py  models_postgres.py  scrapy_quotes.py  update_tags.py
quotes_django/my_quotes/users/: urls.py
quotes_django/mysite/: authors.json
quotes_django/mysite/my_quotes/: apps.py  views.py
quotes_django/mysite/my_quotes/migrations/: 0001_initial.py
quotes_django/mysite/my_quotes/mongo_postgres_db/: models_mongo.py  models_postgres.py
quotes_django/mysite/mysite/: settings.py
quotes_django/mysite/users/: urls.py
quotes_django1/mysite/my_quotes/: urls.py
quotes_django1/mysite/mysite/: urls.py
quotes_django1/mysite/users/: forms.py  views.py
v1/contacts_fastapi/app_contacts/: Spacefile  main.py  pyproject.toml
v1/contacts_fastapi/client_on_fastapi/: main.py
v1/quotes_django/my_quotes/: manage.py
v2/: main.py  pyproject.toml
v2/alembic/versions/: 0573fad86f86_init.py  3e6940941811_update.py
v2/src/database/: models.py
v2/src/repository/: contacts.py  users.py
v2/src/routes/: auth.py  contacts.py  user.py
v2/src/schemas/: contacts.py  users.py
v2/src/services/: upload_avatar.py
(+58 files in other folders)
